--- a/index.html
+++ b/index.html
@@ -2,17 +2,54 @@
 <html lang="en">
 
 <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <meta charset="utf-8">
+    <title>Welcome to our gallary</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
-    <h1>Welcome to our gallery</h1>
-    <p>Hover on any thumbnail to see it bigger</p>
-    <div id="thumb-bar"> </div>
-    <img class="displayed-img">
-    <label>What effect do you want to apply?</label>
-    <input id="effect" type="text">
-    <button>Submit</button>
+    <div class="wrapper">
+        <div class="box1">
+            <header>
+            <h1>Welcome to our </br> gallery</h1>
+            </header>
+        </div>
+        <div class="box2">
+            <p>Hover on any thumbnail to see it bigger</p>
+        </div>
+        <div class="img1">
+            <img src="images/pic1.jpg" alt="eye">
+        </div>
+        <div class="img2">
+            <img src="images/pic2.jpg" alt="sand">
+        </div>
+        <div class="img3">
+            <img src="images/pic3.jpg" alt="flower">
+        </div>
+        <div class="img4">
+            <img src="images/pic4.jpg" alt="egypt">
+        </div>
+        <div class="img5">
+            <img src="images/pic5.jpg" alt="butterfly">
+        </div>
+        <div class="img6">
+            <img src="images/pic5.jpg" alt="big-butterfly">
+        </div>
+            <div id="thumb-bar"> </div>
+            <img class="displayed-img">
+        <div class="box3">
+            <label>What effect do you want to apply?</label>
+        </div>
+        <div class="box4">
+            <input id="effect" type="text">
+        </div>
+        <div class="box5">
+            <button>Submit</button>
+        </div>
+    </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
